# Well

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ai-invoice-extractor-ci.yml
ai-connector/: index_by_mcp.json
ai-connector/mcp-browser-openai-4o-v1/3djake/: 3djake.json
ai-connector/mcp-browser-openai-4o-v1/accor/: accor.json
ai-connector/mcp-browser-openai-4o-v1/acuity-scheduling/: acuity-scheduling.json
ai-connector/mcp-browser-openai-4o-v1/adobe/: adobe.json
ai-connector/mcp-browser-openai-4o-v1/afilae/: afilae.json
ai-connector/mcp-browser-openai-4o-v1/airtable/: airtable.json
ai-connector/mcp-browser-openai-4o-v1/amazon/: amazon-business.json  amazon-fr.json  amazon-prime.json  amazon-us.json
ai-invoice-extractor/: .env  .gitignore  LICENSE  README.md  biome.json  package.json  tsconfig.json
ai-invoice-extractor/src/: cli.ts  constants.ts  types.ts
ai-receipt-generator/: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.bat  run_api.sh
ai-receipt-generator/config/: models.yaml
ai-receipt-generator/src/core/: data_generator.py
ai-receipt-generator/src/core/api/: router.py
ai-receipt-generator/src/core/generators/: anthropic_generator.py
ai-receipt-generator/src/core/prompts/: image_prompt_template.txt
ai-receipt-generator/src/core/prompts/styles/: table_noire.json
receipt-gen-ai/: CONTRIBUTING.md  README.md  __init__.py  requirements.txt
receipt-gen-ai/config/: receipt_input.yaml
receipt-gen-ai/examples/: generated_receipt.json
receipt-gen-ai/tests/: test_core.py
(+287 files in other folders)
